# PUTM_EV_LAPTIMER

./: .gitignore  README.md  _BACKUP_115856.gitignore  _BASE_115856.gitignore  _LOCAL_115856.gitignore  _REMOTE_115856.gitignore  top_flag = true
firmware/: CMakeLists.txt  config.json  config.txt  sdkconfig  sdkconfig 2  sdkconfig 3  sdkconfig 4  sdkconfig.old
firmware/main/: CMakeLists.txt  Kconfig  idf_component.yml  laptimer_task.cpp  lcd_task.cpp  lvgl_ui.c  main.cpp  sdcard_task.cpp  wifi_task.cpp
firmware/main/drivers/: gpio.c  lcd.c  sdcard.c  spi.c  timer.c  timer.cpp  wifi.c  wifi_ap.c  wifi_driver.c
firmware/main/drivers/include/: defines.h  gpio.h  lcd.h  sdcard.h  spi.h  timer.h  wifi.h  wifi_ap.h  wifi_driver.h
firmware/main/fonts/: font10x20-ISO8859-1.c  font10x20-ISO8859-1.h  font6x10-ISO8859-1.c  font6x10-ISO8859-1.h  font9x15-ISO8859-1.c  font9x15-ISO8859-1.h  roboto_mono_10.c  roboto_mono_14.c  roboto_mono_18.c  roboto_mono_38.c
firmware/main/include/: laptimer_task.h  laptimer_task.hpp  lcd_task.h  lcd_task.hpp  lvgl_ui.h  main.h  main.hpp  sdcard_task.h  sdcard_task.hpp  webpage.h  wifi_task.h  wifi_task.hpp
hardware/: _autosave-putm_laptimer 2.kicad_pcb  putm_laptimer.kicad_pcb  putm_laptimer.kicad_pro  putm_laptimer.kicad_sch  sym-lib-table  ~putm_laptimer.kicad_pcb 2.lck  ~putm_laptimer.kicad_sch.lck
hardware/Footprint/: CONN2_2091-1372_WAG.kicad_mod  CONN2_2601-1102_WAG.kicad_mod  CONN2_734-162_WAG.kicad_mod  CONN3_2601-1103_WAG.kicad_mod  CONN3_734-163_WAG.kicad_mod  CONN6_2091-1376_WAG.kicad_mod  CONN6_2601-1106_WAG.kicad_mod  (+6 more)
(+36 files in other folders)
