idf_component_register(
    SRCS 
        "main.cpp"
        "laptimer_task.cpp"
        "sdcard_task.cpp"
        "lcd_task.cpp"
        "wifi_task.cpp"
        "lvgl_ui.c"
        "drivers/gpio.c"
        "drivers/lcd.c"
        "drivers/timer.c"
        "drivers/sdcard.c"
        "drivers/wifi.c"
    INCLUDE_DIRS 
        "include"
        "drivers/include"
)
