idf_component_register(
    SRCS 
        "main.cpp"
        "laptimer_task.cpp"
        "sdcard_task.cpp"
        "lcd_task.cpp"
        "wifi_task.cpp"
        "lvgl_ui.c"
        "fonts/roboto_mono_10.c"
        "fonts/roboto_mono_14.c"
        "fonts/roboto_mono_18.c"
        "fonts/roboto_mono_38.c"
        "drivers/gpio.c"
        "drivers/lcd.c"
        "drivers/timer.cpp"
        "drivers/sdcard.c"
        "drivers/wifi_driver.c"
    INCLUDE_DIRS 
        "include"
        "drivers/include"
)
